Finish structure super-simple-website

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "config": {
     "customUrl": "http://pug-starter.codetap.io",
-    "githubUrl": "http://github.com/marianzburlea/pug-starter.git",
+    "githubUrl": "https://github.com/valentin3199/super-simple-website",
     "deployToGithubIo": true,
     "directory": {
       "development": "tmp",
